Add HTTP security, form-based login, JDBC identity provider